Use modern http client for verify (#31)